🎨 Customize app branding and improve user experience
- Update profile name to 'Sales Team Member'
- Change app title to 'Sales Activity Tracker'
- Enhance info dialog with PWA and offline features
- Update PWA manifest for better mobile experience

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sales Tracker Pro",
+  "name": "Sales Activity Tracker",
   "short_name": "SalesTracker",
   "description": "Gamified sales activity tracking for teams",
   "start_url": "/",
