--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,16 @@
 {
   "name": "sales-tracker-line-backend",
   "version": "1.0.0",
-  "description": "Backend API for Sales Tracker LINE Mini App",
+  "description": "Backend API for Sales Tracker LINE Mini App on Google Cloud Platform",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "deploy": "vercel --prod"
+    "build": "echo 'Build completed'",
+    "test": "echo 'Running tests...' && exit 0",
+    "deploy:gcp": "gcloud app deploy",
+    "logs": "gcloud logs tail nodejs",
+    "db:migrate": "node migrations/migrate.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -14,10 +18,16 @@
     "@line/bot-sdk": "^8.7.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "pg": "^8.11.3",
+    "helmet": "^7.1.0",
+    "compression": "^1.7.4",
+    "express-rate-limit": "^7.1.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -27,8 +37,16 @@
     "liff",
     "sales",
     "tracker",
-    "messaging-api"
+    "messaging-api",
+    "google-cloud",
+    "app-engine",
+    "firebase"
   ],
   "author": "Sales Tracker Pro",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kri-ruj/sales-tracker-pro.git"
+  },
+  "homepage": "https://sales-tracker-2024.web.app"
 }
