Migrate to Google Cloud Platform v2.74 - Complete setup with all secrets configured

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,15 +1,5 @@
 {
   "projects": {
-    "default": "sales-tracker-2024"
-  },
-  "targets": {
-    "sales-tracker-2024": {
-      "hosting": {
-        "production": [
-          "sales-tracker-2024"
-        ]
-      }
-    }
-  },
-  "etags": {}
+    "default": "salesappfkt"
+  }
 }
