--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,11 @@
 {
   "name": "sales-tracker-line-backend",
-  "version": "1.0.0",
+  "version": "3.6.1",
   "description": "Backend API for Sales Tracker LINE Mini App on Google Cloud Platform",
-  "main": "server-simple.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server-simple.js",
-    "start:full": "node server.js",
-    "dev": "nodemon server-simple.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "build": "echo 'Build completed'",
     "test": "echo 'Running tests...' && exit 0",
     "deploy:gcp": "gcloud app deploy",
@@ -14,22 +13,22 @@
     "db:migrate": "node migrations/migrate.js"
   },
   "dependencies": {
+    "@line/bot-sdk": "^9.9.0",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "sqlite3": "^5.1.7"
   },
   "optionalDependencies": {
-    "@line/bot-sdk": "^8.7.0",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
-    "sqlite3": "^5.1.6",
-    "pg": "^8.11.3",
-    "helmet": "^7.1.0",
     "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5"
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   },
   "engines": {
