--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sales-tracker-pro",
-  "version": "1.0.0",
+  "version": "3.6.1",
   "description": "Gamified sales activity tracking for teams",
   "main": "insurance-index.html",
   "scripts": {
@@ -23,7 +23,7 @@
     "http-server": "^14.1.1"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": "20.x"
   },
   "repository": {
     "type": "git",
