--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,20 @@
 {
   "hosting": {
-    "public": "dist",
+    "public": ".",
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**"
+      "**/node_modules/**",
+      "backend/**",
+      "ai-service/**",
+      "scripts/**",
+      "*.md",
+      "*.sh",
+      "package*.json",
+      "test*.js",
+      "update-version.sh",
+      "app.yaml",
+      "cloudbuild.yaml"
     ],
     "rewrites": [
       {
