--- a/.github/workflows/deploy-with-version.yml
+++ b/.github/workflows/deploy-with-version.yml
@@ -162,7 +162,7 @@ jobs:
         repoToken: ${{ secrets.GITHUB_TOKEN }}
         firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
         channelId: live
-        projectId: ${{ secrets.GCP_PROJECT_ID }}
+        projectId: salesappfkt-e4119
 
   deploy-backend:
     name: Deploy Backend
