--- a/.github/workflows/deploy-with-version.yml
+++ b/.github/workflows/deploy-with-version.yml
@@ -216,7 +216,7 @@ jobs:
     name: Deploy AI Service (Optional)
     runs-on: ubuntu-latest
     needs: version-bump
-    if: ${{ hashFiles('ai-service/package.json') != '' }}
+    if: hashFiles('ai-service/package.json') != ''
     
     steps:
     - name: Checkout code
