--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,16 @@
   "description": "Backend API for Sales Tracker LINE Mini App on Google Cloud Platform",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node server-firestore.js",
+    "start:sqlite": "node server.js",
+    "dev": "nodemon server-firestore.js",
+    "dev:sqlite": "nodemon server.js",
+    "setup:firestore": "node setup-firestore.js",
     "build": "echo 'Build completed'",
     "test": "echo 'Running tests...' && exit 0",
     "deploy:gcp": "gcloud app deploy",
-    "logs": "gcloud logs tail nodejs",
-    "db:migrate": "node migrations/migrate.js"
+    "logs": "gcloud logs tail sales-tracker-api",
+    "db:migrate": "node setup-firestore.js"
   },
   "dependencies": {
     "@line/bot-sdk": "^9.9.0",
@@ -19,6 +22,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
+    "@google-cloud/secret-manager": "^5.0.1",
     "sqlite3": "^5.1.7"
   },
   "optionalDependencies": {
