--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "sales-tracker-line-backend",
   "version": "3.6.4",
   "description": "Backend API for Sales Tracker LINE Mini App on Google Cloud Platform",
-  "main": "server.js",
+  "main": "server-firestore.js",
   "scripts": {
     "start": "node server-firestore.js",
     "start:sqlite": "node server.js",
