Fix frontend-backend API endpoint mismatches for proper data sync - v3.6.5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sales-tracker-pro",
   "version": "3.6.4",
+  "type": "module",
   "description": "Gamified sales activity tracking for teams",
   "main": "insurance-index.html",
   "scripts": {
@@ -8,7 +9,9 @@
     "build": "echo 'Static app, no build needed'",
     "deploy:vercel": "vercel --prod",
     "deploy:netlify": "netlify deploy --prod --dir .",
-    "test": "echo 'No tests specified' && exit 0"
+    "test": "echo 'No tests specified' && exit 0",
+    "mcp-server": "node mcp-server-sales-tracker.js",
+    "mcp-firestore": "node firestore-mcp-server.js"
   },
   "keywords": [
     "sales",
@@ -21,6 +24,12 @@
   "license": "MIT",
   "devDependencies": {
     "http-server": "^14.1.1"
+  },
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "^0.6.0",
+    "firebase-admin": "^13.0.1",
+    "node-fetch": "^3.3.2",
+    "zod": "^3.25.58"
   },
   "engines": {
     "node": "20.x"
