🚀 Migrate to Firestore backend & fix LINE OAuth redirect loop
- Migrated backend from SQLite to Firestore for persistent storage
- Fixed OAuth redirect loop by moving URL cleanup after LIFF init
- Updated frontend API URL to new Firestore backend service
- Added Firestore setup scripts and documentation

--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -1,5 +1,6 @@
 runtime: nodejs20
 service: sales-tracker-api
+entrypoint: node server-firestore.js
 
 # Environment variables (non-sensitive only)
 env_variables:
