🔧 Fix version reporting in backend - use APP_VERSION env variable
- Backend now reads version from APP_VERSION environment variable
- Falls back to package.json if env var not set
- Added APP_VERSION=3.7.8 to backend app.yaml
- This fixes CI/CD validation issues

--- a/backend/app.yaml
+++ b/backend/app.yaml
@@ -7,6 +7,7 @@ env_variables:
   NODE_ENV: production
   USE_SECRET_MANAGER: "true"
   GOOGLE_CLOUD_PROJECT: salesappfkt
+  APP_VERSION: "3.7.8"
 
 # Automatic scaling configuration
 automatic_scaling:
