🚀 Fix frontend caching issue and sync to v3.7.9
- Added config.js exception to caching rules (no-cache)
- Config.js will now always serve latest version
- Synced all files to version 3.7.9
- This fixes the frontend/backend version mismatch in CI/CD

The issue was config.js being cached for 1 year!

--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,15 @@ runtime: python39
 service: frontend
 
 handlers:
-# Static assets with caching
+# Config file - no cache for version updates
+- url: /config.js
+  static_files: config.js
+  upload: config.js
+  secure: always
+  http_headers:
+    Cache-Control: "no-cache, no-store, must-revalidate"
+
+# Static assets with caching (excluding config.js)
 - url: /(.*\.(js|css|png|jpg|jpeg|gif|ico|svg|webp))$
   static_files: \1
   upload: .*\.(js|css|png|jpg|jpeg|gif|ico|svg|webp)$
