--- a/backend/package.json
+++ b/backend/package.json
@@ -16,20 +16,23 @@
     "db:migrate": "node setup-firestore.js"
   },
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.0.1",
     "@line/bot-sdk": "^9.9.0",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-validator": "^7.2.1",
     "firebase-admin": "^12.0.0",
-    "@google-cloud/secret-manager": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.7"
   },
   "optionalDependencies": {
     "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^7.2.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
