--- a/finnergy-tracker-v2/public/manifest.json
+++ b/finnergy-tracker-v2/public/manifest.json
@@ -2,20 +2,20 @@
   "name": "Finnergy Tracker Pro - Next Gen Sales Dashboard",
   "short_name": "Finnergy Pro",
   "description": "Modern sales activity tracker with glassmorphism design",
-  "start_url": "/",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#0a0a0a",
   "theme_color": "#667eea",
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
